# dozenal

./: README  install.sh  package.sh  uninstall.sh
dec/: Makefile  dec  (+10 more)
dozenal/: INSTALL  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  install.sh  uninstall.sh
dozenal/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1
dozenal/calendar/: calendar.pl  dozcal  dozcal.old  latexcal  sampdata  times_table.mps
dozenal/conv/: Makefile  conv.c
dozenal/dec/: Makefile  conv.c  conv.h  dec.1  dec.c  dec.h  main.c
dozenal/doc/: Makefile  dec.1  doman.1  doz.1  dozcal.1  dozdate.1  dozdc.1  dozpret.1  dozstring.1  dozword.1  tgmconv.1
dozenal/doman/: Makefile  doman.c  errors.h
dozenal/doz/: Makefile  Makefile.old  conv.c  conv.h  dec.c  doz.1  doz.c  main.c  testfile  testing.sh
dozenal/dozcal/: Makefile  astron.c  call_lua.c  cath_lit_1176.lua  dozcal.1  easter.c  errcodes.h  event_struct.h  fancy.awk  freqtest.sh  geog.c  icaltodcal.c  islamic.c  jewish_date.c  julday.c  julday.h  latex_month.awk  main.c  main_func.h  moon.c  nat_holidays.c  opt_file.c  proc_date.c  process_file.c  regtest.c  tui.c  tui.h  utility.c  utility.h  week_html.awk
dozenal/dozdate/: Makefile  answers.txt  conv.c  conv.h  dateparsetest.sh  dec.c  doz.c  dozdate.1  error_codes.h  get_symmdate.c  get_symmdate.h  main.c  process_date.c  process_date.h  results  script.sh  symm_ans.txt  symm_results.txt  symm_run.sh  symtest.sh  test_symm.sh  testfile.txt  testscript.sh
dozenal/dozdc/: Makefile  Makefile.old  conv.c  conv.h  dec.c  doz.c  dozbc.c  dozbc.fd  dozbc.h  dozdc.1  dozdc.c  dozdc.h  gdozdc  gdozdc.pl  getop.c  getop.h  logo_shapes_mask.xbm  main.c  shunt.c  stack.c  stack.h  testing.sh  vars.c  vars.h  xdozbc.c
dozenal/dozlua/: Makefile  conv.c  conv.h  doz.c  dozlua  main.c  results  test
dozenal/dozpret/: Makefile  conv.c  conv.h  dozpret.1  dozpret.c
dozenal/dozstring/: Makefile  dec.c  dozstring.1  main.c  test.sh
dozenal/dozword/: Makefile  dozword.c
dozenal/include/: conv.h  conv.h.gch  doz.h  dozdc.h  get_symmdate.h  vars.h
dozenal/src/: call_lua.c  conv.c  conv.h  dec.c  double.c  doz.c  dozbc.fd  dozbc.h  dozcal.c  dozdc_cli.c  dozlua.c  dozpret.c  easter.c  error_codes.h  errors.h  get_symmdate.c  getop.c  icaltodcal.c  julday.h  libholidays.h  logo_shapes_dozenal.xpm  moon.h  output.c  proc_date.h  stack.h  sunriset.c  tgm.c  tgmconv.c  tui.c  vars.c
(+75 files in other folders)
